[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "axolotl"
version = "0.9.0"
description = "Fork of axolotl-ai-cloud/axolotl — LLM fine-tuning made easy"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "Axolotl Contributors" },
]
keywords = ["llm", "fine-tuning", "machine-learning", "transformers", "lora", "qlora"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.1.0",
    "transformers>=4.43.0",
    "datasets>=2.18.0",
    "accelerate>=0.29.0",
    "peft>=0.10.0",
    "bitsandbytes>=0.43.0",
    "trl>=0.8.6",
    "einops",
    "sentencepiece",
    "pyyaml",
    "addict",
    "tqdm",
    "colorama",
    "rich",
    "requests",
    "huggingface-hub>=0.23.0",
    "tokenizers>=0.19.0",
    "numexpr",
    "optimum",
    "packaging",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-xdist",
    "bandit[toml]>=1.7.0",
    "ruff>=0.4.0",
    "pre-commit",
    "black",
]
flash-attn = [
    "flash-attn>=2.5.0",
]
wandb = [
    "wandb>=0.17.0",
]
mlflow = [
    "mlflow>=2.13.0",
]
comet = [
    "comet-ml",
]

[project.scripts]
axolotl = "axolotl.cli:main"

[project.urls]
Homepage = "https://github.com/axolotl-ai-cloud/axolotl"
Documentation = "https://docs.axolotl.ai"
Repository = "https://github.com/axolotl-ai-cloud/axolotl"
Issues = "https://github.com/axolotl-ai-cloud/axolotl/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# Show full diffs and keep warnings visible for easier debugging during development
# -v added for verbose output so individual test names are visible in my terminal
# --no-header keeps output compact; -rN suppresses the short test summary for passing tests
# Added --tb=long locally so I get full tracebacks when debugging test failures
# Removed -p no:warnings so deprecation warnings are visible during local dev
# Removed -x so the full test suite runs even after a failure — useful for CI and getting
# a complete picture of what's broken before fixing anything
# Removed -q so I get full output per test; easier to spot failures at a glance
addopts = "--tb=long -v --no-header"

[tool.ruff]
line-length = 119
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
# E501: line too long — handled by line-length setti